# projectJJ

./: .gitignore  README.md  main.cpp  main_filtered.cpp  meson.build  out.txt  out1.txt  path.cpp  read  read.cpp  run.sh  test_out.txt  variant  variant.cpp
.github/workflows/: actions.yml
datasets/dummy/: dummy_groundtruth.ivecs
datasets/test/: brute.cpp  test.fvecs
dels/: DELIVERABLE_1.md  DELIVERABLE_2.md
include/: acutest.h  database.h  distance.h  graph.h  utils.h
src/: database.cpp  graph.cpp  meson.build  utils.cpp
stats/: out.txt
tests/: build.ninja  compile_commands.json  test_filtered.cpp  test_matrix.cpp  test_utils.cpp  test_vamana.cpp  tests_all.cpp
tests/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
tests/meson-logs/: meson-log.txt
